feat: redesign calendar with paginated episodes
